# vodka

./: CMakeLists.txt
include/vodka/array/: array.hpp  get.hpp  to_array.hpp
include/vodka/type_traits/: bool_constant.hpp  false_type.hpp  integral_constant.hpp  is_lvalue_reference.hpp  is_same.hpp  is_void.hpp  remove_const.hpp  remove_cv.hpp  remove_reference.hpp  remove_volatile.hpp  true_type.hpp
include/vodka/util/: forward.hpp  move.hpp
include/vodka/utility/: forward.hpp  move.hpp
src/: CMakeLists.txt
src/vodka/coord/: ecef.cpp
src/vodka/math/stats/: dist.cpp  dist.hpp  prob.cpp  prob.hpp
test/: CMakeLists.txt
test/comp_test/: CMakeLists.txt
test/comp_test/vodka/type_traits/: is_void.cpp
test/fuzz_test/: CMakeLists.txt  main.cpp
test/unit_test/: CMakeLists.txt  main.cpp
test/unit_test/vodka/math/stats/: dist.cpp
test/unit_test/vodka/type_traits/: integral_constant.cpp
test/unit_test/vodka/utility/: forward.cpp
util/cmake/: Linters.cmake  compiler_settings.cmake
